made mobile responsive, changed style of start button, fixed start button bug, fixed alert message to display on the page, fixed the background fluidness

--- a/simple-simon/simple-simon-game.html
+++ b/simple-simon/simple-simon-game.html
@@ -10,33 +10,36 @@
 </head>
 <body>
 
-<div id="top-box"></div>
+<div id="top-box" class="justify-content-center pt-4">
 
-<div id="entire-box" class="container-fluid">
+</div>
+
+<div id="entire-box" class="container-fluid mt-5">
     <div class="row text-center">
-        <div class="col-6 pt-5 center-square">
+        <div id="red" class="col-6 col-lg-6 pt-5 center-square">
             <div id="1" class="square red"></div>
         </div>
-        <div class="col-6 pt-5 center-square">
+        <div id="blue" class="col-6 col-lg-6 pt-5 center-square">
             <div id="2" class="square blue"></div>
         </div>
     </div>
     <div class="row text-center">
-        <h1 class="col-12 pt-1">Simple Simon</h1>
+        <h1 id="title-one" class="col-12 pt-1">Simple Simon</h1>
     </div>
     <div class="row">
-        <div class="col-6 pb-5 center-square">
+        <div id="green" class="col-6 col-lg-6 pb-5 center-square">
             <div id="3" class="square green"></div>
         </div>
-        <div class="col-6 pb-5 center-square">
+        <div id="yellow" class="col-6 col-lg-6 pb-5 center-square">
             <div id="4" class="square yellow"></div>
         </div>
+        <h1 id="title-two" class="col-12 pt-1 text-center">Simple Simon</h1>
     </div>
 </div>
 
 <br>
 
-<button id="start">Start</button>
+<button id="start" class="btn btn-dark">Start</button>
 
 <br><br>
 
